<resources>
    <string name="app_name">eshop</string>
    <string name="logo">Logo</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="item_image">Item Image</string>
    <string name="default_text">Default text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bought_items">Bought items</string>
    <string name="items_in_shopping_cart">Items in shopping cart</string>
    <string name="add_item">Add item to cart</string>
    <string name="arrow_left">￩</string>
    <string name="remove_item">Remove item from cart</string>
    <string name="send">send</string>
<<<<<<< HEAD
    <string name="clear">clear</string>
    <string name="remove_item2">remove item</string>
=======
    <string name="remove_all_items_from_cart">Remove all items from cart</string>
>>>>>>> d069e96 (fix: ui)
</resources>