<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.ShoppingCartActivity"
    android:orientation="vertical"
    >

    <include layout="@layout/shoppingcartbar"/>
    <TextView
        android:id="@+id/item_textview"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout"
        app:layout_constraintLeft_toLeftOf="@id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/items_in_shopping_cart"
        android:textAlignment="center"
        android:textSize="30sp"
        />
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/item_textview"
        android:id="@+id/itemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />
    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        >
    <Button
        android:id="@+id/btnRemoveSelected"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_item"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btnRemoveAll"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_all_items_from_cart"
        android:textAlignment="center"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>