<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_height="70dp"
    android:id="@+id/appbarLayout">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/navbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/design_default_color_primary"
    >
<Button
    android:id="@+id/backButton"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/rounded_corner_gray"
    android:text="@string/arrow_left"
    android:textSize="30sp"
    android:textAlignment="center"
    android:layout_width="50dp"
    android:layout_height="50dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />

<ImageView
    android:id="@+id/logo"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:src="@drawable/jidl"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:layout_constraintBottom_toBottomOf="@+id/navbar"
    app:layout_constraintTop_toTopOf="@+id/navbar"
    app:layout_constraintLeft_toLeftOf="@id/navbar"
    app:layout_constraintRight_toRightOf="@id/navbar"
    android:contentDescription="@string/logo"
    android:background="@drawable/rounded_corner_white"
    />
<Button
    android:id="@+id/sendButton"
    app:layout_constraintTop_toTopOf="@id/navbar"
    app:layout_constraintBottom_toBottomOf="@id/navbar"
    app:layout_constraintRight_toRightOf="@id/navbar"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="5dp"
    android:background="@drawable/rounded_corner_gray"
    android:text="@string/send"
    android:textSize="11sp"
    android:textAlignment="center"
    android:layout_width="50dp"
    android:layout_height="50dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.appbar.AppBarLayout>